<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Standard Chess Description -->
            <TextView
                style="@style/Heading"
                android:id="@+id/chess_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chess_help_title"
                android:layout_gravity="center" />

            <TextView
                style="@style/Body"
                android:id="@+id/chess_help1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chess_help1"
                android:layout_gravity="center" />

            <TextView
                style="@style/Body"
                android:id="@+id/chess_help2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chess_help2"
                android:layout_gravity="center" />

            <TextView
                style="@style/Body"
                android:id="@+id/chess_help3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chess_help3"
                android:layout_gravity="center" />

            <!-- Daily Puzzle Description -->
            <TextView
                style="@style/Heading"
                android:id="@+id/puzzle_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puzzle_help_title"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                style="@style/Body"
                android:id="@+id/puzzle_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puzzle_help"
                android:layout_gravity="center" />

            <!-- Settings Description -->
            <TextView
                style="@style/Heading"
                android:id="@+id/settings_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_help_title"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                style="@style/Body"
                android:id="@+id/settings_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_help"
                android:layout_gravity="center" />

            <!-- How To Play Button -->
            <TextView
                style="@style/AltButton"
                android:id="@+id/rules_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_button"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>