<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/blackknight"
        app:layout_constraintTop_toTopOf="@id/menu_top"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintLeft_toLeftOf="@id/menu_left"
        app:layout_constraintRight_toRightOf="@id/menu_right"/>

    <TextView
        style="@style/Title"
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/title_image"
        app:layout_constraintBottom_toTopOf="@id/new_game_button"
        app:layout_constraintLeft_toLeftOf="@id/menu_left"
        app:layout_constraintRight_toRightOf="@id/menu_right" />

    <TextView
        style="@style/MenuButton"
        android:id="@+id/new_game_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/new_game"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/daily_puzzle_button"
        app:layout_constraintLeft_toLeftOf="@id/menu_left"
        app:layout_constraintRight_toRightOf="@id/menu_right"/>

    <TextView
        style="@style/MenuButton"
        android:id="@+id/daily_puzzle_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/daily_puzzle"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/new_game_button"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        app:layout_constraintLeft_toLeftOf="@id/menu_left"
        app:layout_constraintRight_toRightOf="@id/menu_right"/>

    <ImageView
        style="@style/MenuButton"
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:padding="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/menu_bottom"
        app:layout_constraintLeft_toLeftOf="@id/menu_left"
        app:layout_constraintRight_toLeftOf="@id/help_button"
        app:layout_constraintTop_toBottomOf="@id/daily_puzzle_button"
        android:src="@drawable/gear_icon"
        app:tint="?colorSecondary" />

    <ImageView
        style="@style/MenuButton"
        android:id="@+id/help_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:padding="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/menu_bottom"
        app:layout_constraintLeft_toRightOf="@id/settings_button"
        app:layout_constraintRight_toRightOf="@id/menu_right"
        app:layout_constraintTop_toBottomOf="@id/daily_puzzle_button"
        android:src="@drawable/question"
        app:tint="?colorSecondary" />


</androidx.constraintlayout.widget.ConstraintLayout>